zigbee2mqtt/z2m-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: z2m
  # namespace: homeassistant
spec:
  replicas: 1
  selector:
    matchLabels:
      app: z2m
  template:
    metadata:
      labels:
        app: z2m
    spec:
      nodeSelector:
        kubernetes.io/hostname: homelab-03
      containers:
      - name: z2m
        image: koenkk/zigbee2mqtt:2.0.0 
        imagePullPolicy: IfNotPresent
        securityContext:
          privileged: true
        ports:
          - containerPort: 8099
        volumeMounts:
          - name: z2m-data
            mountPath: /app/data
          - name: z2m-udev
            mountPath: /run/udev
          - name: ttyacm
            mountPath: /dev/ttyUSB0
      volumes:
        - name: z2m-data
          persistentVolumeClaim:
            claimName: z2m-pvc
        - name: z2m-udev
          hostPath:
            path: /run/udev
        - name: ttyacm
          hostPath:
            path: /dev/ttyUSB0
