zigbee2mqtt/z2m-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: z2m-service
  # namespace: homeassistant
  labels:
    app: z2m
spec:
  type: LoadBalancer
  selector:
    app: z2m
  ports:
  - port: 8080
    targetPort: 8099
    protocol: TCP
