zigbee2mqtt/z2m-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: z2m-ingress
  namespace: home-automation
spec:
  ingressClassName: traefik
  rules:
  - host: z2m.erix-homelab.site
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: z2m-service
            port:
              number: 8080
  tls:
    - secretName: erix-homelab-site-tls
      hosts:
        - z2m.erix-homelab.site
